<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_learn"
            android:icon="@mipmap/learn"
            android:title="@string/menu_learn" />
        <item
            android:id="@+id/nav_sign"
            android:icon="@mipmap/sign"
            android:title="@string/menu_sign" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@mipmap/profile"
            android:title="@string/menu_profile" />

        <item
            android:id="@+id/nav_achievement"
            android:icon="@mipmap/profile"
            android:title="@string/menu_achievement" />
    </group>
</menu>