<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.signtech_draft.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_learn"
        android:name="com.example.signtech_draft.ui.learn.LearnFragment"
        android:label="@string/menu_learn"
        tools:layout="@layout/fragment_learn" />

    <fragment
        android:id="@+id/nav_sign"
        android:name="com.example.signtech_draft.ui.sign.SignFragment"
        android:label="@string/menu_sign"
        tools:layout="@layout/fragment_sign" />
</navigation>